[package]
name = "wascc-actor"
version = "0.7.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "SDK for developing WebAssembly Actor modules for hosting in waSCC"
license = "Apache-2.0"
homepage = "https://wascc.dev"
documentation = "https://docs.rs/wascc-actor"
readme = "README.md"
keywords = ["wapc", "webassembly", "wasm", "wascc", "actor"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
wascc-codec = { version = "0.6.0", path = "../wascc-codec" }
wapc-guest = "0.3.0"
serde_json = "1.0.51"
serde_derive = "1.0.106"
serde = "1.0.106"
log = "0.4.8"
lazy_static = "1.4.0"
